Implemented ui for tricky cards